# libtujavolk

./: README.md
libtujavolk/: main.c  meson.build  tujavolk.c
libtujavolk.xcodeproj/: project.pbxproj
libtujavolk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libtujavolk/include/: tujavolk.h
